removed redundant functions

--- a/cfb/intro.ipynb
+++ b/cfb/intro.ipynb
@@ -2,9 +2,134 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Navy', 'moneyline': '+800'}, {'name': 'Notre Dame', 'moneyline': '−1250'}]\n",
+      "[{'name': 'UTEP', 'moneyline': '+110'}, {'name': 'Jacksonville State', 'moneyline': '−130'}]\n",
+      "[{'name': 'Massachusetts', 'moneyline': '+280'}, {'name': 'New Mexico State', 'moneyline': '−340'}]\n",
+      "[{'name': 'Ohio', 'moneyline': None}, {'name': 'San Diego State', 'moneyline': None}]\n",
+      "[{'name': 'Hawaii', 'moneyline': '+700'}, {'name': 'Vanderbilt', 'moneyline': '−1050'}]\n",
+      "[{'name': 'San Jose State', 'moneyline': None}, {'name': 'USC', 'moneyline': None}]\n",
+      "[{'name': 'FIU', 'moneyline': '+290'}, {'name': 'Louisiana Tech', 'moneyline': '−350'}]\n",
+      "[{'name': 'Kent State', 'moneyline': None}, {'name': 'UCF', 'moneyline': None}]\n",
+      "[{'name': 'North Carolina State', 'moneyline': None}, {'name': 'UConn', 'moneyline': None}]\n",
+      "[{'name': 'Nebraska', 'moneyline': None}, {'name': 'Minnesota', 'moneyline': None}]\n",
+      "[{'name': 'Florida', 'moneyline': None}, {'name': 'Utah', 'moneyline': None}]\n",
+      "[{'name': 'Miami OH', 'moneyline': None}, {'name': 'Miami FL', 'moneyline': None}]\n",
+      "[{'name': 'Central Michigan', 'moneyline': None}, {'name': 'Michigan State', 'moneyline': None}]\n",
+      "[{'name': 'Louisville', 'moneyline': None}, {'name': 'Georgia Tech', 'moneyline': None}]\n",
+      "[{'name': 'Stanford', 'moneyline': None}, {'name': 'Hawaii', 'moneyline': None}]\n",
+      "[{'name': 'Fresno State', 'moneyline': None}, {'name': 'Purdue', 'moneyline': None}]\n",
+      "[{'name': 'Bowling Green', 'moneyline': None}, {'name': 'Liberty', 'moneyline': None}]\n",
+      "[{'name': 'Louisiana Tech', 'moneyline': None}, {'name': 'SMU', 'moneyline': None}]\n",
+      "[{'name': 'Ball State', 'moneyline': None}, {'name': 'Kentucky', 'moneyline': None}]\n",
+      "[{'name': 'East Carolina', 'moneyline': None}, {'name': 'Michigan', 'moneyline': None}]\n",
+      "[{'name': 'Colorado', 'moneyline': None}, {'name': 'TCU', 'moneyline': None}]\n",
+      "[{'name': 'Arkansas State', 'moneyline': None}, {'name': 'Oklahoma', 'moneyline': None}]\n",
+      "[{'name': 'Utah State', 'moneyline': None}, {'name': 'Iowa', 'moneyline': None}]\n",
+      "[{'name': 'Northern Illinois', 'moneyline': None}, {'name': 'Boston College', 'moneyline': None}]\n",
+      "[{'name': 'Virginia', 'moneyline': None}, {'name': 'Tennessee', 'moneyline': None}]\n",
+      "[{'name': 'Akron', 'moneyline': None}, {'name': 'Temple', 'moneyline': None}]\n",
+      "[{'name': 'Ohio State', 'moneyline': None}, {'name': 'Indiana', 'moneyline': None}]\n",
+      "[{'name': 'Rice', 'moneyline': None}, {'name': 'Texas', 'moneyline': None}]\n",
+      "[{'name': 'Massachusetts', 'moneyline': None}, {'name': 'Auburn', 'moneyline': None}]\n",
+      "[{'name': 'Boise State', 'moneyline': None}, {'name': 'Washington', 'moneyline': None}]\n",
+      "[{'name': 'South Florida', 'moneyline': None}, {'name': 'Western Kentucky', 'moneyline': None}]\n",
+      "[{'name': 'Buffalo', 'moneyline': None}, {'name': 'Wisconsin', 'moneyline': None}]\n",
+      "[{'name': 'California', 'moneyline': None}, {'name': 'North Texas', 'moneyline': None}]\n",
+      "[{'name': 'Nevada', 'moneyline': None}, {'name': 'USC', 'moneyline': None}]\n",
+      "[{'name': 'UTSA', 'moneyline': '−110'}, {'name': 'Houston', 'moneyline': '−110'}]\n",
+      "[{'name': 'New Mexico', 'moneyline': None}, {'name': 'Texas A&M', 'moneyline': None}]\n",
+      "[{'name': 'Army West Point', 'moneyline': None}, {'name': 'ULM', 'moneyline': None}]\n",
+      "[{'name': 'Texas State', 'moneyline': None}, {'name': 'Baylor', 'moneyline': None}]\n",
+      "[{'name': 'Washington State', 'moneyline': None}, {'name': 'Colorado State', 'moneyline': None}]\n",
+      "[{'name': 'Texas Tech', 'moneyline': None}, {'name': 'Wyoming', 'moneyline': None}]\n",
+      "[{'name': 'West Virginia', 'moneyline': None}, {'name': 'Penn State', 'moneyline': None}]\n",
+      "[{'name': 'Middle Tennessee', 'moneyline': None}, {'name': 'Alabama', 'moneyline': None}]\n",
+      "[{'name': 'Toledo', 'moneyline': None}, {'name': 'Illinois', 'moneyline': None}]\n",
+      "[{'name': 'South Carolina', 'moneyline': None}, {'name': 'North Carolina', 'moneyline': None}]\n",
+      "[{'name': 'Old Dominion', 'moneyline': None}, {'name': 'Virginia Tech', 'moneyline': None}]\n",
+      "[{'name': 'South Alabama', 'moneyline': None}, {'name': 'Tulane', 'moneyline': None}]\n",
+      "[{'name': 'Sam Houston', 'moneyline': None}, {'name': 'BYU', 'moneyline': None}]\n",
+      "[{'name': 'Coastal Carolina', 'moneyline': None}, {'name': 'UCLA', 'moneyline': None}]\n",
+      "[{'name': 'Northwestern', 'moneyline': None}, {'name': 'Rutgers', 'moneyline': None}]\n",
+      "[{'name': 'Oregon State', 'moneyline': None}, {'name': 'San Jose State', 'moneyline': None}]\n",
+      "[{'name': 'LSU', 'moneyline': None}, {'name': 'Florida State', 'moneyline': None}]\n",
+      "[{'name': 'Clemson', 'moneyline': None}, {'name': 'Duke', 'moneyline': None}]\n",
+      "[{'name': 'Texas A&M', 'moneyline': None}, {'name': 'Miami FL', 'moneyline': None}]\n",
+      "[{'name': 'Texas', 'moneyline': None}, {'name': 'Alabama', 'moneyline': None}]\n",
+      "[{'name': 'LSU', 'moneyline': None}, {'name': 'Mississippi State', 'moneyline': None}]\n",
+      "[{'name': 'Tennessee', 'moneyline': None}, {'name': 'Florida', 'moneyline': None}]\n",
+      "[{'name': 'South Carolina', 'moneyline': None}, {'name': 'Georgia', 'moneyline': None}]\n",
+      "[{'name': 'Washington', 'moneyline': None}, {'name': 'Michigan State', 'moneyline': None}]\n",
+      "[{'name': 'Ohio State', 'moneyline': None}, {'name': 'Notre Dame', 'moneyline': None}]\n",
+      "[{'name': 'UCLA', 'moneyline': None}, {'name': 'Utah', 'moneyline': None}]\n",
+      "[{'name': 'Ole Miss', 'moneyline': None}, {'name': 'Alabama', 'moneyline': None}]\n",
+      "[{'name': 'Florida State', 'moneyline': None}, {'name': 'Clemson', 'moneyline': None}]\n",
+      "[{'name': 'Texas', 'moneyline': None}, {'name': 'Baylor', 'moneyline': None}]\n",
+      "[{'name': 'Arkansas', 'moneyline': None}, {'name': 'LSU', 'moneyline': None}]\n",
+      "[{'name': 'Texas A&M', 'moneyline': None}, {'name': 'Arkansas', 'moneyline': None}]\n",
+      "[{'name': 'South Carolina', 'moneyline': None}, {'name': 'Tennessee', 'moneyline': None}]\n",
+      "[{'name': 'Kansas', 'moneyline': None}, {'name': 'Texas', 'moneyline': None}]\n",
+      "[{'name': 'LSU', 'moneyline': None}, {'name': 'Ole Miss', 'moneyline': None}]\n",
+      "[{'name': 'Georgia', 'moneyline': None}, {'name': 'Auburn', 'moneyline': None}]\n",
+      "[{'name': 'Michigan', 'moneyline': None}, {'name': 'Nebraska', 'moneyline': None}]\n",
+      "[{'name': 'Texas', 'moneyline': None}, {'name': 'Oklahoma', 'moneyline': None}]\n",
+      "[{'name': 'Alabama', 'moneyline': None}, {'name': 'Texas A&M', 'moneyline': None}]\n",
+      "[{'name': 'Auburn', 'moneyline': None}, {'name': 'LSU', 'moneyline': None}]\n",
+      "[{'name': 'USC', 'moneyline': None}, {'name': 'Notre Dame', 'moneyline': None}]\n",
+      "[{'name': 'Arkansas', 'moneyline': None}, {'name': 'Alabama', 'moneyline': None}]\n",
+      "[{'name': 'Oregon', 'moneyline': None}, {'name': 'Washington', 'moneyline': None}]\n",
+      "[{'name': 'Texas A&M', 'moneyline': None}, {'name': 'Tennessee', 'moneyline': None}]\n",
+      "[{'name': 'Tennessee', 'moneyline': None}, {'name': 'Alabama', 'moneyline': None}]\n",
+      "[{'name': 'Michigan', 'moneyline': None}, {'name': 'Michigan State', 'moneyline': None}]\n",
+      "[{'name': 'TCU', 'moneyline': None}, {'name': 'Kansas State', 'moneyline': None}]\n",
+      "[{'name': 'Utah', 'moneyline': None}, {'name': 'USC', 'moneyline': None}]\n",
+      "[{'name': 'Penn State', 'moneyline': None}, {'name': 'Ohio State', 'moneyline': None}]\n",
+      "[{'name': 'Clemson', 'moneyline': None}, {'name': 'Miami FL', 'moneyline': None}]\n",
+      "[{'name': 'Georgia', 'moneyline': None}, {'name': 'Florida', 'moneyline': None}]\n",
+      "[{'name': 'Clemson', 'moneyline': None}, {'name': 'North Carolina State', 'moneyline': None}]\n",
+      "[{'name': 'Oklahoma', 'moneyline': None}, {'name': 'Kansas', 'moneyline': None}]\n",
+      "[{'name': 'Ohio State', 'moneyline': None}, {'name': 'Wisconsin', 'moneyline': None}]\n",
+      "[{'name': 'Oregon', 'moneyline': None}, {'name': 'Utah', 'moneyline': None}]\n",
+      "[{'name': 'Kansas State', 'moneyline': None}, {'name': 'Texas', 'moneyline': None}]\n",
+      "[{'name': 'Texas A&M', 'moneyline': None}, {'name': 'Ole Miss', 'moneyline': None}]\n",
+      "[{'name': 'Washington', 'moneyline': None}, {'name': 'USC', 'moneyline': None}]\n",
+      "[{'name': 'LSU', 'moneyline': None}, {'name': 'Alabama', 'moneyline': None}]\n",
+      "[{'name': 'Oklahoma', 'moneyline': None}, {'name': 'Oklahoma State', 'moneyline': None}]\n",
+      "[{'name': 'Notre Dame', 'moneyline': None}, {'name': 'Clemson', 'moneyline': None}]\n",
+      "[{'name': 'Ole Miss', 'moneyline': None}, {'name': 'Georgia', 'moneyline': None}]\n",
+      "[{'name': 'Michigan State', 'moneyline': None}, {'name': 'Ohio State', 'moneyline': None}]\n",
+      "[{'name': 'Duke', 'moneyline': None}, {'name': 'North Carolina', 'moneyline': None}]\n",
+      "[{'name': 'Utah', 'moneyline': None}, {'name': 'Washington', 'moneyline': None}]\n",
+      "[{'name': 'USC', 'moneyline': None}, {'name': 'Oregon', 'moneyline': None}]\n",
+      "[{'name': 'Michigan', 'moneyline': None}, {'name': 'Penn State', 'moneyline': None}]\n",
+      "[{'name': 'Texas', 'moneyline': None}, {'name': 'TCU', 'moneyline': None}]\n",
+      "[{'name': 'Florida', 'moneyline': None}, {'name': 'LSU', 'moneyline': None}]\n",
+      "[{'name': 'Miami FL', 'moneyline': None}, {'name': 'Florida State', 'moneyline': None}]\n",
+      "[{'name': 'UCLA', 'moneyline': None}, {'name': 'USC', 'moneyline': None}]\n",
+      "[{'name': 'North Carolina', 'moneyline': None}, {'name': 'Clemson', 'moneyline': None}]\n",
+      "[{'name': 'Baylor', 'moneyline': None}, {'name': 'TCU', 'moneyline': None}]\n",
+      "[{'name': 'Georgia', 'moneyline': None}, {'name': 'Tennessee', 'moneyline': None}]\n",
+      "[{'name': 'Kansas State', 'moneyline': None}, {'name': 'Kansas', 'moneyline': None}]\n",
+      "[{'name': 'Ole Miss', 'moneyline': None}, {'name': 'Mississippi State', 'moneyline': None}]\n",
+      "[{'name': 'TCU', 'moneyline': None}, {'name': 'Oklahoma', 'moneyline': None}]\n",
+      "[{'name': 'Oregon State', 'moneyline': None}, {'name': 'Oregon', 'moneyline': None}]\n",
+      "[{'name': 'Penn State', 'moneyline': None}, {'name': 'Michigan State', 'moneyline': None}]\n",
+      "[{'name': 'Ohio State', 'moneyline': None}, {'name': 'Michigan', 'moneyline': None}]\n",
+      "[{'name': 'Texas A&M', 'moneyline': None}, {'name': 'LSU', 'moneyline': None}]\n",
+      "[{'name': 'Florida State', 'moneyline': None}, {'name': 'Florida', 'moneyline': None}]\n",
+      "[{'name': 'Alabama', 'moneyline': None}, {'name': 'Auburn', 'moneyline': None}]\n",
+      "[{'name': 'Clemson', 'moneyline': None}, {'name': 'South Carolina', 'moneyline': None}]\n",
+      "[{'name': 'North Carolina', 'moneyline': None}, {'name': 'North Carolina State', 'moneyline': None}]\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
@@ -12,11 +137,13 @@
     "import sys\n",
     "sys.path.insert(0, '/Users/zacksiegfried/Documents/underdogs')\n",
     "from urlBuilder import DKbuild\n",
+    "import dkTools\n",
     "\n",
     "page = requests.get(DKbuild('football/ncaaf', '?category=game-lines&subcategory=game'))\n",
     "soup = BeautifulSoup(page.content, 'html5lib')\n",
     "\n",
-    "#print(soup)"
+    "for x in dkTools.gameSelector(soup):\n",
+    "    print(x)"
    ]
   },
   {
@@ -149,69 +276,7 @@
      ]
     }
    ],
-   "source": [
-    "\n",
-    "\n",
-    "# function to group teams into their respective games\n",
-    "def pairwise(list_data):\n",
-    "    return list(zip(*[iter(list_data)] * 2))\n",
-    "\n",
-    "\n",
-    "### Returns a list of lists with elements containing match up information. This is in the form of a dictionary with team:\n",
-    "# {'name': , 'moneyline: '}         # could extract more info\n",
-    "\n",
-    "def gameSelector(soup):\n",
-    "\n",
-    "    page = soup.find('div', class_ = 'sportsbook-offer-category-card')\n",
-    "    info_list = page.find_all('tbody', class_ = 'sportsbook-table__body')\n",
-    "\n",
-    "    teams_list_raw = []\n",
-    "    for event in info_list:\n",
-    "        temp = event.find_all('tr')\n",
-    "        teams_list_raw.append(temp)\n",
-    "    teams_list = [item for sublist in teams_list_raw for item in sublist]\n",
-    "\n",
-    "\n",
-    "    # building list of indivdual game team names and odds\n",
-    "    games_list = []\n",
-    "    for i, j in pairwise(teams_list):\n",
-    "\n",
-    "        game_data = []\n",
-    "        team1_data = {}\n",
-    "        team2_data = {}\n",
-    "\n",
-    "\n",
-    "        # extracting data for information that is always present (team name, )\n",
-    "        team1_data['name'] = i.find('div', class_ = 'event-cell__name-text').text\n",
-    "        team2_data['name'] = j.find('div', class_ = 'event-cell__name-text').text\n",
-    "\n",
-    "        # extracting data for information that can be missing (odds, )\n",
-    "        team1_data['moneyline'] = i.find('span', class_ = 'sportsbook-odds american no-margin default-color')   \n",
-    "        team2_data['moneyline'] = j.find('span', class_ = 'sportsbook-odds american no-margin default-color')\n",
-    "\n",
-    "\n",
-    "        game_data.append(team1_data)\n",
-    "        game_data.append(team2_data)\n",
-    "\n",
-    "        # extracting raw numerical value from bs4 object\n",
-    "        for team in game_data:\n",
-    "            if team['moneyline'] != None:\n",
-    "                team['moneyline'] = team['moneyline'].text\n",
-    "\n",
-    "\n",
-    "        games_list.append(game_data)\n",
-    "\n",
-    "\n",
-    "    #bug check\n",
-    "    #for x in games_list:\n",
-    "        #print(x)\n",
-    "\n",
-    "    return(games_list)\n",
-    "    \n",
-    "\n",
-    "for x in gameSelector(soup):\n",
-    "    print(x)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
